crates/wows-replays/tests/snapshots/20260223_115252_PZSC718-Narai_s06_Atoll/packet_snapshots__packet_020.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 40
payload:
  Map:
    arena_id: 2407209631878217729
    blob:
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 104
      - 42
      - 104
      - 43
      - 104
      - 44
      - 104
      - 45
      - 104
      - 46
      - 104
      - 47
      - 104
      - 143
      - 104
      - 49
      - 104
      - 50
      - 104
      - 51
      - 104
      - 144
      - 104
      - 53
      - 104
      - 145
      - 104
      - 55
      - 104
      - 56
      - 104
      - 57
      - 104
      - 58
      - 104
      - 59
      - 104
      - 146
      - 104
      - 61
      - 104
      - 62
      - 104
      - 63
      - 104
      - 64
      - 104
      - 65
      - 104
      - 147
      - 104
      - 67
      - 104
      - 68
      - 104
      - 69
      - 104
      - 148
      - 104
      - 71
      - 104
      - 72
      - 104
      - 73
      - 104
      - 74
      - 104
      - 75
      - 104
      - 76
      - 104
      - 77
      - 104
      - 78
      - 104
      - 79
      - 104
      - 80
      - 104
      - 81
      - 104
      - 82
      - 104
      - 83
      - 104
      - 149
      - 104
      - 85
      - 104
      - 86
      - 104
      - 87
      - 104
      - 88
      - 104
      - 89
      - 104
      - 90
      - 104
      - 91
      - 104
      - 150
      - 104
      - 93
      - 104
      - 94
      - 104
      - 95
      - 104
      - 96
      - 104
      - 97
      - 16
      - 0
      - 104
      - 99
      - 104
      - 100
      - 104
      - 101
    map_name: spaces/s06_Atoll
    matrix:
      - 0
      - 0
      - 128
      - 63
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 128
      - 63
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 128
      - 63
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 128
      - 63
    space_id: 2840
    unknown: 1
    unknown1: 2569338882
    unknown2: 2081856522
