crates/wows-replays/tests/snapshots/20260223_115252_PZSC718-Narai_s06_Atoll/packet_snapshots__packet_021.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 44
payload:
  PlayerOrientation:
    parent_id: 433436
    pid: 433435
    position:
      x: 0
      y: 0
      z: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: 0
