crates/wows-replays/tests/snapshots/20260223_115252_PZSC718-Narai_s06_Atoll/packet_snapshots__packet_023.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 201871
    entity_type: InteractiveZone
    position:
      x: 522.7999877929688
      y: 0
      z: 430.79998779296875
    props:
      componentsState:
        captureLogic:
          bothInside: 0
          captureSpeed: 1
          captureTime: 40
          hasInvaders: 0
          invaderTeam: -1
          isEnabled: 0
          isVisible: 0
          progress: 0
        controlPoint:
          buoyVisualId: 4293248944
          index: 6
          nextControlPoint: -1
          timerName: []
          type: 1
      innerRadius: 0
      interactionBuoyancies:
        - 0
      name:
        - 49
        - 54
        - 51
        - 50
        - 53
        - 51
        - 52
        - 53
        - 46
        - 52
        - 55
        - 67
        - 68
        - 48
        - 51
        - 70
        - 51
        - 46
        - 48
        - 65
        - 55
        - 52
        - 54
        - 52
        - 57
        - 66
        - 46
        - 65
        - 56
        - 48
        - 55
        - 70
        - 57
        - 66
        - 51
      ownerId: 0
      radius: 66
      teamId: 1
      type: 9
      useRing: 0
      visualState:
        forAllies: 0
        forEnemies: 0
        forOwner: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: 0
    space_id: 0
    spec_idx: 14
    state_length: 101
    vehicle_id: 2840
