crates/wows-replays/tests/snapshots/20260223_115252_PZSC718-Narai_s06_Atoll/packet_snapshots__packet_024.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 433436
    entity_type: Vehicle
    position:
      x: 705.0451049804688
      y: 0
      z: -459.3214111328125
    props:
      airDefenseDispRadius: 0
      airDefenseTargetIds:
        - []
        - []
        - []
      antiAirAuras:
        - enabled: 1
          id: 0
        - enabled: 1
          id: 1
        - enabled: 1
          id: 2
      blockedControls: 0
      buoyancy: 200000
      buoyancyCurrentState: 0
      buoyancyCurrentWaterline: 0
      buoyancyRudderIndex: 0
      burningFlags: 0
      crewModifiersCompactParams:
        isInAdaptation: 0
        learnedSkills:
          - []
          - []
          - - 8
            - 12
            - 17
            - 20
            - 25
          - - 12
            - 18
            - 20
            - 25
          - []
          - []
        paramsId: 3870467280
      deathSettings:
        - 176
        - 199
        - 230
        - 255
      debugText: []
      deepRuddersAngle: 0
      draught: 0
      effects: []
      engineDir: 0
      enginePower: 0
      hasActiveMainSquadron: 0
      hasAirTargetsInRange: 0
      health: 39000
      ignoreMapBorders: 0
      isAlive: 1
      isAntiAirMode: 0
      isBot: 0
      isFogHornOn: 0
      isInRageMode: 0
      isInvisible: 0
      isOnForsage: 0
      laserTargetLocalPos: 0
      maxHealth: 39000
      maxServerSpeedRaw: 834482
      miscsPresetsStatus: []
      oilLeakState: 0
      owner: 433435
      regenCrewHpLimit: 0
      regeneratedHealth: 0
      regenerationHealth: 0
      respawnTime: 0
      ruddersAngle: 0
      selectedWeapon: 0
      serverSpeedRaw: 0
      shipConfig:
        - 1
        - 0
        - 0
        - 0
        - 208
        - 180
        - 30
        - 211
        - 51
        - 0
        - 0
        - 0
        - 14
        - 0
        - 0
        - 0
        - 208
        - 44
        - 44
        - 211
        - 208
        - 172
        - 47
        - 211
        - 0
        - 0
        - 0
        - 0
        - 208
        - 172
        - 38
        - 211
        - 208
        - 172
        - 45
        - 211
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 5
        - 0
        - 0
        - 0
        - 176
        - 207
        - 18
        - 254
        - 176
        - 207
        - 178
        - 253
        - 176
        - 207
        - 226
        - 253
        - 176
        - 207
        - 114
        - 254
        - 176
        - 207
        - 66
        - 254
        - 9
        - 0
        - 0
        - 0
        - 176
        - 111
        - 72
        - 249
        - 176
        - 111
        - 141
        - 255
        - 176
        - 111
        - 29
        - 255
        - 176
        - 111
        - 173
        - 255
        - 176
        - 111
        - 237
        - 254
        - 176
        - 111
        - 221
        - 254
        - 176
        - 111
        - 45
        - 254
        - 176
        - 111
        - 61
        - 254
        - 176
        - 111
        - 29
        - 254
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 159
        - 98
        - 255
        - 176
        - 159
        - 82
        - 255
        - 176
        - 159
        - 18
        - 255
        - 176
        - 159
        - 242
        - 254
        - 176
        - 159
        - 2
        - 255
        - 0
        - 0
        - 0
        - 0
        - 1
        - 0
        - 0
        - 0
        - 176
        - 239
        - 29
        - 209
        - 4
        - 0
        - 0
        - 0
        - 176
        - 239
        - 47
        - 255
        - 0
        - 0
        - 0
        - 0
        - 176
        - 239
        - 239
        - 253
        - 176
        - 239
        - 79
        - 253
        - 24
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 38
        - 0
        - 0
        - 0
      sounds: []
      speedSignDir: 1
      state:
        atba:
          atbaTargets: []
        battery: ~
        buffs:
          buffItems: []
        decals:
          heatDecals: []
          shotDecals: []
        vehicleVisualState: 0
      targetLocalPos: 65535
      teamId: 0
      torpedoLocalPos: 4470
      triggeredSkillsData: 0
      uiEnabled: 1
      visibilityFlags: 0
      waveLocalPos: 4470
      weaponLockFlags: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: -0.22702915966510773
    space_id: 0
    spec_idx: 2
    state_length: 421
    vehicle_id: 2840
