crates/wows-replays/tests/snapshots/20260223_115252_PZSC718-Narai_s06_Atoll/packet_snapshots__packet_025.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 433444
    entity_type: Vehicle
    position:
      x: 714.177978515625
      y: 0
      z: -503.2265930175781
    props:
      airDefenseDispRadius: 0
      airDefenseTargetIds:
        - []
        - []
        - []
        - []
      antiAirAuras:
        - enabled: 1
          id: 0
        - enabled: 1
          id: 1
        - enabled: 1
          id: 2
        - enabled: 1
          id: 3
      blockedControls: 0
      buoyancy: 200000
      buoyancyCurrentState: 0
      buoyancyCurrentWaterline: 0
      buoyancyRudderIndex: 0
      burningFlags: 0
      crewModifiersCompactParams:
        isInAdaptation: 0
        learnedSkills:
          - []
          - - 5
            - 26
            - 28
            - 40
          - []
          - []
          - []
          - []
        paramsId: 4293043952
      deathSettings:
        - 176
        - 199
        - 230
        - 255
      debugText: []
      deepRuddersAngle: 0
      draught: 0
      effects: []
      engineDir: 0
      enginePower: 0
      hasActiveMainSquadron: 0
      hasAirTargetsInRange: 0
      health: 57250
      ignoreMapBorders: 0
      isAlive: 1
      isAntiAirMode: 0
      isBot: 0
      isFogHornOn: 0
      isInRageMode: 0
      isInvisible: 0
      isOnForsage: 0
      laserTargetLocalPos: 0
      maxHealth: 57250
      maxServerSpeedRaw: 800225
      miscsPresetsStatus: []
      oilLeakState: 0
      owner: 433443
      regenCrewHpLimit: 0
      regeneratedHealth: 0
      regenerationHealth: 0
      respawnTime: 0
      ruddersAngle: 0
      selectedWeapon: 0
      serverSpeedRaw: 0
      shipConfig:
        - 1
        - 0
        - 0
        - 0
        - 240
        - 54
        - 31
        - 211
        - 48
        - 0
        - 0
        - 0
        - 14
        - 0
        - 0
        - 0
        - 240
        - 46
        - 204
        - 199
        - 240
        - 174
        - 207
        - 199
        - 0
        - 0
        - 0
        - 0
        - 240
        - 174
        - 198
        - 199
        - 240
        - 174
        - 205
        - 199
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 5
        - 0
        - 0
        - 0
        - 176
        - 207
        - 18
        - 254
        - 176
        - 207
        - 178
        - 254
        - 176
        - 207
        - 50
        - 255
        - 176
        - 207
        - 130
        - 254
        - 176
        - 207
        - 66
        - 254
        - 7
        - 0
        - 0
        - 0
        - 176
        - 111
        - 72
        - 249
        - 176
        - 111
        - 29
        - 254
        - 176
        - 111
        - 125
        - 255
        - 176
        - 111
        - 61
        - 255
        - 176
        - 111
        - 61
        - 254
        - 176
        - 111
        - 173
        - 255
        - 176
        - 111
        - 141
        - 255
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 159
        - 98
        - 255
        - 176
        - 159
        - 82
        - 255
        - 176
        - 159
        - 18
        - 255
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 4
        - 0
        - 0
        - 0
        - 176
        - 239
        - 63
        - 255
        - 0
        - 0
        - 0
        - 0
        - 176
        - 239
        - 239
        - 253
        - 176
        - 239
        - 95
        - 253
        - 26
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 26
        - 0
        - 0
        - 0
      sounds: []
      speedSignDir: 1
      state:
        atba:
          atbaTargets:
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
        battery: ~
        buffs:
          buffItems: []
        decals:
          heatDecals: []
          shotDecals: []
        vehicleVisualState: 0
      targetLocalPos: 65535
      teamId: 0
      torpedoLocalPos: 4470
      triggeredSkillsData: 0
      uiEnabled: 1
      visibilityFlags: 0
      waveLocalPos: 4470
      weaponLockFlags: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: -0.22702915966510773
    space_id: 0
    spec_idx: 2
    state_length: 471
    vehicle_id: 2840
